Fix animation bug caused by html overflow

--- a/style.css
+++ b/style.css
@@ -1190,7 +1190,7 @@ a {
 }
 
 /* Fix horizontal scroll issue on mobile */
-html, body {
+body {
     overflow-x: hidden !important;
-    max-width: 100vw !important;
+    width: 100%;
 }
